--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/rzhou10/marvel-dashboard-backend/issues"
   },
-  "homepage": "https://github.com/rzhou10/marvel-dashboard-backend#readme"
+  "homepage": "https://github.com/rzhou10/marvel-dashboard-backend#readme",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security"
+  }
 }
